fixed bug in FF where GE window did not stretch to bottom of page, added some help content

--- a/css/3ppstyle.css
+++ b/css/3ppstyle.css
@@ -5,15 +5,20 @@
 
 body {
 	font-size:9pt;
-	height:100%;
+	min-height:100%
 }
 html { 
 	min-height:100%;/* make sure it is at least as tall as the viewport */
-    position:relative
-	height:100%; }
+	 }
 
 
 .clear { clear: both; }
+
+.page {
+	  min-height:100%
+  
+	
+}
 
 #header {
 	background: #e3da9d;
@@ -22,15 +27,19 @@ html {
 
 #content {
 	padding: 15px 30px 0 0;
+	min-height:100%
 	}
 	#main-content {
+		height: 100%;
 		margin-left: 310px;
+		
 		
 	}
 
 #sidebar {
-	width: 280px;
+	width: 290px;
 	float: left;
+	height:100vh;
 	padding: 0 2px 0 15px;
 	}
 	#sidebar ul {
